--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,7 +1,7 @@
 name: Metrics
 on:
   # Schedule daily updates
-  schedule: [{ cron: "0 0 * * 2,6" }]
+  schedule: [{ cron: "0 0 * * *" }]
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
@@ -16,8 +16,8 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.METRICS_TOKEN }}
           SHOW_PROFILE_VIEWS: False
+          SHOW_EDITORS: False
           SHOW_SHORT_INFO: False
           SHOW_LOC_CHART: False
           SHOW_COMMIT: False
-          SHOW_DAYS_OF_WEEK: False
           SYMBOL_VERSION: 2
