--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,7 +1,8 @@
 name: Metrics
 on:
   # Schedule daily updates
-  schedule: [{ cron: "0 0 * * *" }]
+  schedule:
+    - cron: "0 16 * * *"
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
