--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,7 +2,7 @@ name: My Profile
 on:
   # Schedule daily updates
   schedule:
-    - cron: "0 0 0 * *"
+    - cron: "0 0 * * 0"
 jobs:
   readme:
     runs-on: ubuntu-latest
