--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,5 +20,5 @@ jobs:
           SHOW_EDITORS: False
           SHOW_SHORT_INFO: False
           SHOW_LOC_CHART: False
-          SHOW_COMMIT: False
+          SHOW_PROJECTS: False
           SYMBOL_VERSION: 2
