--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,6 +3,9 @@ on:
   # Schedule daily updates
   schedule:
     - cron: "0 0 * * 0"
+  push:
+    branches:
+      - main
 jobs:
   readme:
     runs-on: ubuntu-latest
